# kitsune

./: .gitignore  README.md
clang/: CMakeLists.txt  (+2 more)
clang/kitsune/: CMakeLists.txt  cuda.cfg.in  hip.cfg.in  kokkos.cfg.in  none.cfg.in  opencilk.cfg.in  opencl.cfg.in  openmp.cfg.in  qthreads.cfg.in  realm.cfg.in  serial.cfg.in
kitsune/: .gitignore  CMakeLists.txt
kitsune-rt/: CMakeLists.txt
kitsune-rt/Realm/: kitsune_realm_c.h  realm_wrapper.cc  tmp.txt
kitsune-rt/realm/: kitsune_realm_c.h  realm_wrapper.cc
kitsune/cmake/caches/: kitsune-dev-darwin-aarch64.cmake  kitsune-dev-darwin.cmake  kitsune-dev-desktop.cmake  kitsune-dev-vars.sh  kitsune-dev.cmake
kitsune/cmake/modules/: AddKitsune.cmake  CMakeLists.txt  FindCilkRTS.cmake  FindKokkos.cmake  FindOpenCilk.cmake  FindOpenCilkRTS.cmake  FindQthreads.cmake  FindRealm.cmake  KitsuneConfig.cmake.in  KitsuneUtils.cmake
kitsune/configs/: CMakeLists.txt  cuda.cfg.in  hip.cfg.in  kokkos.cfg.in  none.cfg.in  opencilk.cfg.in  openmp.cfg.in  qthreads.cfg.in  realm.cfg.in  serial.cfg.in
kitsune/docs/: RELEASE-NOTES.md  TODO.md  building.md  limitations.md  plugins.md  using.md
kitsune/examples/: CMakeLists.txt
kitsune/examples/c++/: std_vecadd.cpp
kitsune/examples/forall/: CMakeLists.txt  complex.cpp  matmult.cpp  matvec.cpp  normalize.cpp  std_vecadd.cpp  vecadd-range.cpp  vecadd.cpp
kitsune/examples/kokkos/: CMakeLists.txt  complex.cpp  matmult-1.cpp  matmult1.cpp  normalize.cpp  raytrace.cpp  run-kokkos-examples.sh.in  vecadd.cpp
kitsune/experiments/: .gitignore  CMakeLists.txt  README.md  common.mk  cuda.mk  dot.mk  experiments.mk  extract-logs.py  gcc.mk  hip.mk  kitsune-setup-env.sh  kitsune-tapir.mk  kokkos.mk  launch-bench.sh  makefile  plot-launch-bench.py
kitsune/experiments/copy/: copy-forall.cpp  copy-kokkos-no-views.cpp  copy-kokkos.cpp  copy.f90  makefile
kitsune/experiments/euler3d/: .gitignore  euler3d-forall.cpp  euler3d-kokkos-no-view.cpp  euler3d-kokkos-noview.cpp  euler3d-kokkos.cpp  euler3d.cpp  euler3d.f90  makefile
kitsune/experiments/euler3d-multi-file/: fvcorr.domn.193K  makefile
kitsune/experiments/hotspot3D/: .gitignore  3D-forall.c  3D.c  makefile  run  run.forall
kitsune/experiments/inc/: clang.mk  common.mk  config.mk.cmake  cuda.mk  hip.mk  kitsune-tapir.mk  kokkos.mk
kitsune/experiments/intersect/: common.h  intersect.cpp  makefile
kitsune/experiments/launch-attr/: makefile  srad-forall.cpp
kitsune/experiments/lto-tests/: makefile  vecadd-add.cpp  vecadd-forall.cpp  vecadd-init.cpp
kitsune/experiments/math-calls/: makefile  math-calls.cpp  mathcalls-forall.cpp
kitsune/experiments/matmult/: makefile  matmul-forall.cpp  matmul-forall_fixed.cpp  matmul.f90
kitsune/experiments/memaccess_attr/: main.cpp
kitsune/experiments/monotone/: makefile  monotone-forall.cpp  monotone-kokkos.cpp
kitsune/experiments/multi-module/: .gitignore  compute.cpp  init.cpp  main.cpp  makefile
kitsune/experiments/multi-target/: .gitignore  common.cpp  common.h  intersect.cpp  kokkos-multi-target.cpp  makefile  multi-target.cpp  nested-launch.cpp  portage.cpp  repro.cpp  vecadd-kokkos.cpp  vecadd.cpp
kitsune/experiments/noforall/: makefile  noforall.cpp
kitsune/experiments/printf/: printf.hip  ptest.cpp
kitsune/experiments/raytracer/: .gitignore  benchmark.py  makefile  raytrace-forall.cpp  raytrace-kokkos-noview.cpp  raytrace-kokkos.cpp  raytrace-openmp.cpp  raytrace.cu  raytracer-forall.cpp  raytracer-kokkos-no-view.cpp  raytracer-kokkos-noview.cpp  raytracer-kokkos.cpp  raytracer.cu  raytracer.f90
kitsune/experiments/saxpy/: README.md  benchmark.py  makefile  profile.sh  saxpy-forall.cpp  saxpy-kokkos.cpp  saxpy.f90
kitsune/experiments/spreadsheets/: CudaABI-Benchmarks.xlsx
kitsune/experiments/srad/: makefile  srad-forall.cpp  srad-kokkos.cpp  srad.cpp  srad.f90
kitsune/experiments/struct-args/: makefile  struct-args.cpp
kitsune/experiments/vecadd/: .gitignore  README.md  benchmark.py  makefile  profile.sh  vecadd-forall-no-prefetch.cpp  vecadd-forall.cpp  vecadd-kokkos-no-views.cpp  vecadd-kokkos.cpp  vecadd.cu  vecadd.f90  vecadd.hip
kitsune/include/: CMakeLists.txt
kitsune/include/CudaRT/: cudart.h
kitsune/include/kitsune/: CMakeLists.txt  config.h.cmake  kitsune.h  timer.h
kitsune/lib/CudaRT/: CMakeLists.txt  cudart.cpp
kitsune/lib/GPU/: check-hip.cc  llvm-cuda.cc  makefile  nocuda.cc
kitsune/lib/OpenCL/: CMakeLists.txt  cl.cc  kernel.cl  makefile  test.c
kitsune/lib/Realm/: CMakeLists.txt  kitsune_realm_c.h  realm_wrapper.cpp  test.cpp
kitsune/modulefiles/kokkos/: 3.3.01
kitsune/modulefiles/legion/: stable
kitsune/modulefiles/opencilkrt/: release
kitsune/modulefiles/qthreads/: master
kitsune/patches/: Kokkos_Exceptions.patch  Kokkos_HostSharedPtr.patch  Kokkos_MemorySpace.patch
kitsune/plugins/: CMakeLists.txt  PluginRegistry.cpp
kitsune/plugins/ConstGlobalVars/: CMakeLists.txt  ConstGlobalVarsContext.cpp  ConstGlobalVarsContext.h  ConstGlobalVarsPass.cpp  ConstGlobalVarsPlugin.cpp  ConstGlobalVarsPlugin.h
kitsune/runtime/: .clang-tidy  CMakeLists.txt  cuda.cpp  debug.cpp  debug.h  dlutils.h  kitrt-cuda.h  kitrt-support.cpp  kitrt.cpp  kitrt.h  llvm-gpu.h  llvm-hip.h  memory.cpp  memory.h  memory_map.cpp  memory_map.h  shared.cpp  support.cpp
kitsune/runtime/cuda/: README.md  cuda.cpp  cuda.h  dylib_support.cpp  kitcuda.cpp  kitcuda.h  kitcuda_dylib.h  launching.cpp  llvm-cuda.cpp  llvm-cuda.h  memory.cpp  streams.cpp
kitsune/runtime/hip/: CMakeLists.txt  dylib_support.cpp  hip.cpp  hip.h  hipmath.cpp  kithip.cpp  kithip.h  kithip_dylib.h  launching.cpp  llvm-hip.cpp  memory.cpp  streams.cpp
kitsune/runtime/kitcuda/: cuda.cpp  cuda.h  llvm-cuda.cpp  llvm-cuda.h
kitsune/runtime/llvm/: kitrt-llvm.h
kitsune/runtime/realm/: realm_abi.cpp  realm_abi.h
kitsune/test/: CMakeLists.txt  ftapir-no-cuda.cpp  ftapir-no-hip.cpp  ftapir-no-kokkos.cpp  ftapir-no-opencilk.cpp  ftapir-no-openmp.cpp  ftapir-no-qthreads.cpp  ftapir-no-realm.cpp  ftapir.cpp  kitcc.c  kitxx.cpp  lit.cfg.py  lit.site.cfg.py.in
kitsune/tests/: CMakeLists.txt
(+1040 files in other folders)
